objects/agf__ADM_Release_Burndown_Item__c.object
<CustomObject>
    <description>Used to save data for generating the release burndown chart.</description>
    <fields>
        <fullName>agf__Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Story_Points__c</fullName>
        <label>Story Points</label>
        <precision>12</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Team_Release__c</fullName>
        <label>Team Release</label>
        <referenceTo>agf__ADM_Team_Release__c</referenceTo>
        <relationshipName>Release_Burndown_Item_2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>agf__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Done</fullName>
                </value>
                <value>
                    <fullName>Not Done</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Release Burndown Item</label>
    <listViews>
        <fullName>agf__All</fullName>
        <columns>agf__Story_Points__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>agf__Date__c</columns>
        <columns>agf__Team_Release__c</columns>
        <columns>agf__Type__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Release Burndown Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Release Burndown Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>